--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Hello Word</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, .......</p>
+    </header>
+
+    <section>
+        <h2>HTML</h2>
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>        
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+    </section>
+
+    <footer>
+        <p>Uma página desenvolvida por Alura Start</p>
+    </footer>
+
+
 </body>
 </html>
