incluindo imagem e arquivo css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Word</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
         <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>        
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+        <img src="imagem/Olá Mundo.png" alt="Imagem Olá Mundo">
     </section>
 
     <footer>
