--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, .......</p>
+        <p>Que bom te ver por aqui,
+             <span id="nome-usuario">
+                Fulano
+            </span>
+        </p>
     </header>
 
     <section>
@@ -23,6 +27,6 @@
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
