--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Word</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Hello World</h1>
         <p>Que bom te ver por aqui,
-             <span id="nome-usuario">
+            <span id="nome-usuario">
                 Fulano
             </span>
         </p>
@@ -18,9 +20,13 @@
 
     <section>
         <h2>HTML</h2>
-        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>        
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+        <h2>Outras linguagens</h2>
+        <li id="lista">Lista</li>
+        <h2>Alunos</h2>
+        <li id="aluno"></li>
         <img src="imagem/Olá Mundo.png" alt="Imagem Olá Mundo">
     </section>
 
@@ -29,4 +35,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
