--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>HTML</h2>
         <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
-        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+        <p class="texto-inglês">Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
         <h2>Outras linguagens</h2>
         <li id="lista">Lista</li>
         <h2>Alunos</h2>
